footer gap fix

--- a/css/main.css
+++ b/css/main.css
@@ -321,7 +321,7 @@
         grid-template-columns: 1fr 2fr 1fr;
         justify-content: space-between;
         align-items: start;
-        gap: 2rem;
+        gap: 6rem;
     }
     .footer .company,
     .footer .studio,
